edited text file

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                     <label for="stressor">Stressor</label>
                     <select name="stressor" id="stressor">
                         <option value="Depression">Depression</option>
-                        <option value="ptsd">PTSD</option>
+                        <option value="Ptsd">PTSD</option>
                         <option value="Bipolar Disorder">Bipolar Disorder</option>
                         <option value="Schizophrenia">Schizophrenia</option>
                         <option value="Psychosis">Psychosis</option>
