--- a/templates/team.html
+++ b/templates/team.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,30 +29,22 @@
 	</nav>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8 mx-auto">
-				<h1 class="text-center mb-5">Our Team</h1>
+			<div class="col-md-4">
 				<div class="card">
+					<img src="{% static "images/prof.jpg" %}" class="card-img-top" alt="Prof. Akeredolu-Ale Bolanle Idowu">
 					<div class="card-body">
-						<h4 class="card-title">John Doe</h4>
-						<p class="card-text">John is a full-stack web developer with experience in HTML, CSS, JavaScript, and several front-end frameworks.</p>
-						<a href="#" class="btn btn-primary">View Profile</a>
-					</div>
-				</div>
-				<div class="card">
-					<div class="card-body">
-						<h4 class="card-title">Jane Smith</h4>
-						<p class="card-text">Jane is a data scientist with expertise in natural language processing and machine learning algorithms.</p>
-						<a href="#" class="btn btn-primary">View Profile</a>
-					</div>
-				</div>
-				<div class="card">
-					<div class="card-body">
-						<h4 class="card-title">Bob Johnson</h4>
-						<p class="card-text">Bob is a UX designer with experience in user research, wireframing, and prototyping.</p>
+						<h4 class="card-title">Prof. Akeredolu-Ale Bolanle Idowu</h4>
+						<p class="card-text">
+							<strong>Role:</strong> Principal Investigator<br>
+							<strong>Email:</strong> bolanlekassal@gmail.com<br>
+							<strong>Qualification:</strong> PhD.<br>
+							<strong>Institution:</strong> Federal University of Agriculture, Abeokuta
+						</p>
 						<a href="#" class="btn btn-primary">View Profile</a>
 					</div>
 				</div>
 			</div>
+			<!-- Add other team members here -->
 		</div>
 	</div>
 </body>
