--- a/templates/team.html
+++ b/templates/team.html
@@ -31,7 +31,7 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="card">
-					<img src="{% static "images/prof.jpg" %}" class="card-img-top" alt="Prof. Akeredolu-Ale Bolanle Idowu">
+					<img src="{% static "img/img.png" %}" class="card-img-top" alt="Prof. Akeredolu-Ale Bolanle Idowu">
 					<div class="card-body">
 						<h4 class="card-title">Prof. Akeredolu-Ale Bolanle Idowu</h4>
 						<p class="card-text">
@@ -40,11 +40,111 @@
 							<strong>Qualification:</strong> PhD.<br>
 							<strong>Institution:</strong> Federal University of Agriculture, Abeokuta
 						</p>
-						<a href="#" class="btn btn-primary">View Profile</a>
 					</div>
 				</div>
 			</div>
-			<!-- Add other team members here -->
+			<div class="col-md-4">
+				<div class="card">
+					<img src="{% static "img/img_1.png" %}" class="card-img-top" alt="Prof. Akeredolu-Ale Bolanle Idowu">
+					<div class="card-body">
+						<h4 class="card-title">Dr. Ayo Osisanwo </h4>
+						<p class="card-text">
+							<strong>Role:</strong> Co-Researcher<br>
+							<strong>Email:</strong> ayosisdelexus@yahoo.com <br>
+							<strong>Qualification:</strong> PhD.<br>
+							<strong>Institution:</strong> University of Ibadan, Ibadan
+						</p>
+					</div>
+				</div>
+			</div>
+            <div class="col-md-4">
+				<div class="card">
+					<img src="{% static "img/img_2.png" %}" class="card-img-top" alt="Prof. Akeredolu-Ale Bolanle Idowu">
+					<div class="card-body">
+						<h4 class="card-title">Dr. Emmanuel Chinaguh </h4>
+						<p class="card-text">
+							<strong>Role:</strong> Co-Researcher<br>
+							<strong>Email:</strong> chinaguhec@funaab.edu.ng  <br>
+							<strong>Qualification:</strong> PhD.<br>
+							<strong>Institution:</strong> Federal University of Agriculture, Abeokuta
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+        <div class="row">
+			<div class="col-md-4">
+				<div class="card">
+					<img src="{% static "img/img_3.png" %}" class="card-img-top" alt="Prof. Akeredolu-Ale Bolanle Idowu">
+					<div class="card-body">
+						<h4 class="card-title">Dr. Sunday Amosu</h4>
+						<p class="card-text">
+							<strong>Role:</strong> Co-Researcher<br>
+							<strong>Email:</strong> amosusunday@yahoo.com<br>
+							<strong>Qualification:</strong> BSc. <br>
+							<strong>Institution:</strong> Others
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card">
+					<img src="{% static "img/img_4.png" %}" class="card-img-top" alt="Prof. Akeredolu-Ale Bolanle Idowu">
+					<div class="card-body">
+						<h4 class="card-title">Dr. Olanrewaju Sodehinde </h4>
+						<p class="card-text">
+							<strong>Role:</strong> Co-Researcher<br>
+							<strong>Email:</strong> lanresodeinde@yahoo.com<br>
+							<strong>Qualification:</strong> PhD.<br>
+							<strong>Institution:</strong> Others
+						</p>
+					</div>
+				</div>
+			</div>
+            <div class="col-md-4">
+				<div class="card">
+					<img src="{% static "img/img_5.png" %}" class="card-img-top" alt="Prof. Akeredolu-Ale Bolanle Idowu">
+					<div class="card-body">
+						<h4 class="card-title">Dr. Adegboyega Ogunwale </h4>
+						<p class="card-text">
+							<strong>Role:</strong> Co-Researcher<br>
+							<strong>Email:</strong> monaolapo@yahoo.co.uk<br>
+							<strong>Qualification:</strong> MSc.<br>
+							<strong>Institution:</strong> Others
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+        <div class="row">
+			<div class="col-md-4">
+				<div class="card">
+					<img src="{% static "img/img_6.png" %}" class="card-img-top" alt="Prof. Akeredolu-Ale Bolanle Idowu">
+					<div class="card-body">
+						<h4 class="card-title">Mr. Yusuf Adeyemi</h4>
+						<p class="card-text">
+							<strong>Role:</strong> Co-Researcher<br>
+							<strong>Email:</strong> adeyemiya@funaab.edu.ng<br>
+							<strong>Qualification:</strong> MSc. <br>
+							<strong>Institution:</strong> Federal University of Agriculture, Abeokuta
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card">
+					<img src="{% static "img/img_7.png" %}" class="card-img-top" alt="Prof. Akeredolu-Ale Bolanle Idowu">
+					<div class="card-body">
+						<h4 class="card-title">Mr. Bosun Agosu</h4>
+						<p class="card-text">
+							<strong>Role:</strong> Co-Researcher<br>
+							<strong>Email:</strong> agosuoss@funaab.edu.ng<br>
+							<strong>Qualification:</strong> MSc.<br>
+							<strong>Institution:</strong> Federal University of Agriculture, Abeokuta
+						</p>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
