--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Emotion Analysis App</a>
+    <a class="navbar-brand" href="#">Sentiment Analysis App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 mx-auto">
-            <h1 class="text-center mb-5">Emotion Analysis App</h1>
+            <h1 class="text-center mb-5">Sentiment Analysis App</h1>
             <form id="input-form">
                 <div class="form-group">
                     <label for="stressor">Stressor</label>
