--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -74,3 +74,41 @@ body {
         transform: scale(1);
     }
 }
+
+.styled-select {
+    display: block;
+    width: 100%;
+    height: 36px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555555;
+    background-color: #ffffff;
+    background-image: none;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  }
+  
+  .styled-select:focus {
+    border-color: #66afe9;
+    outline: 0;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  }
+  .styled-select::after {
+    content: "▼";
+    position: absolute;
+    top: 14px;
+    right: 10px;
+    font-size: 12px;
+    pointer-events: none;
+  }
+  
+  label {
+    font-weight: bold;
+  }
+  
+  .form-group {
+    margin-bottom: 15px;
+  }
+  
