--- a/templates/howitworks.html
+++ b/templates/howitworks.html
@@ -2,32 +2,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Emotion Analysis App - How It Works</title>
+    <title>Sentiment Analysis App - How It Works</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static "css/htw.css" %}">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Sentiment Analysis App</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url "index" %}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url "team" %}">Team</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url "htw" %}">How It Works</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-<div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <a class="navbar-brand" href="#">Sentiment Analysis App</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url "index" %}">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "team" %}">Team</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "htw" %}">How It Works</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+<div class="container mt-5">
     <h1 class="text-center mb-5">How It Works</h1>
     <div class="row steps">
         <div class="col-md-4 step">
