--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Emotion Analysis App</title>
+    <title>Sentiment Analysis App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static "css/index.css" %}">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -11,41 +11,43 @@
     <script src="{% static "css/index.css" %}"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Sentiment Analysis App</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url "index" %}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url "team" %}">Team</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url "htw" %}">How It Works</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-<div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <a class="navbar-brand" href="#">Sentiment Analysis App</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url "index" %}">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "team" %}">Team</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "htw" %}">How It Works</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    
+<div class="container mt-5">
     <div class="row">
         <div class="col-md-6 mx-auto">
             <h1 class="text-center mb-5">Sentiment Analysis App</h1>
             <form id="input-form">
                 <div class="form-group">
                     <label for="stressor">Stressor</label>
-                    <select name="stressor" id="stressor">
-                        <option value="Depression">Depression</option>
-                        <option value="Ptsd">PTSD</option>
-                        <option value="Bipolar Disorder">Bipolar Disorder</option>
-                        <option value="Schizophrenia">Schizophrenia</option>
-                        <option value="Psychosis">Psychosis</option>
+                    <select name="stressor" id="stressor" class="styled-select">
+                      <option value="Depression">Depression</option>
+                      <option value="Ptsd">PTSD</option>
+                      <option value="Bipolar Disorder">Bipolar Disorder</option>
+                      <option value="Schizophrenia">Schizophrenia</option>
+                      <option value="Psychosis">Psychosis</option>
                     </select>
-                </div>
+                  </div>
+                  
                 <div class="form-group">
                     <label for="input-text">Enter your text:</label>
                     <textarea class="form-control" id="input-text" rows="3"></textarea>
