--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
+    <link href="{% static 'img/logo.jpg' %}" rel="icon">
     <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -56,7 +56,7 @@
 <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-        <h1 class="logo me-auto"><a href="index.html">Sentiment Analysis App</a></h1>
+        <h1 class="logo me-auto"><a href="index.html">MENTAL HEALTH SENTIMENT ANALYSIS</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -79,8 +79,8 @@
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="d-flex align-items-center">
     <div class="container">
-        <h1>Welcome to Sentiment Analysis App</h1>
-        <h2>Emotional Sentiment Analysis Application</h2>
+        <h1>Welcome to MENTAL HEALTH SENTIMENT ANALYSIS</h1>
+        <h2>MENTAL HEALTH SENTIMENT ANALYSIS FRAMEWORK</h2>
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
 </section><!-- End Hero -->
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-lg-4 d-flex align-items-stretch">
                     <div class="content">
-                        <h3>Why Choose Sentiment Analysis App?</h3>
+                        <h3>Why Choose MENTAL HEALTH SENTIMENT ANALYSIS FRAMEWORK?</h3>
                         <p>
                             This project centres on facework as a linguistic resource in preventive, diagnostic
                             and curative aspects of mental health in response to life stressors. This is in view of
@@ -151,8 +151,8 @@
                 </div>
 
                 <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
-                    <h3>Emotional Sentiment Analysis Application</h3>
-                    <p>The emotional sentiment analysis application utilizes advanced algorithms to analyze and
+                    <h3>Mental Health Sentiment Analysis</h3>
+                    <p>The mental health sentiment analysis application utilizes advanced algorithms to analyze and
                         interpret the emotional tone and sentiment expressed in text data, providing valuable insights
                         into the emotional states of individuals or groups.</p>
 
@@ -304,9 +304,12 @@
 
             <div class="section-title">
                 <h2>Team</h2>
-                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-                    consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-                    fugiat sit in iste officiis commodi quidem hic quas.</p>
+                <p>We are committed to a long-term mission to optimise mental health through effective communication.
+                    Our leadership team encompasses experts from the fields of English Language and Communication,
+                    Psychiatry, Clinical Psychology, and Information Communication Technology. This strategic
+                    partnership forms the bedrock of our multidisciplinary collaboration, as we endeavor to chart the
+                    right course, ensuring that our efforts yield impactful outcomes in the realm of
+                    mental well-being.</p>
             </div>
 
             <div class="row">
@@ -353,7 +356,7 @@
                     <div class="member d-flex align-items-start">
                         <div class="pic"><img src="{% static 'img/img_2.png' %}" class="img-fluid" alt=""></div>
                         <div class="member-info">
-                            <h4>Mr. Emmanuel Chinaguh</h4>
+                            <h4>Dr. Emmanuel Chinaguh</h4>
                             <span>Co-Researcher</span>
                             <p>Email: chinaguhec@funaab.edu.ng</p>
                             <p>Qualification: PhD</p>
@@ -376,7 +379,7 @@
                             <span>Co-Researcher</span>
                             <p>Email: amosusunday@yahoo.com</p>
                             <p>Qualification: BSc.</p>
-                            <p>Institution: Others</p>
+                            <p>Institution: Neuropsychiatric Hospital, Aro, Abeokuta, Nigeria</p>
                             <div class="social">
                                 <a href=""><i class="ri-twitter-fill"></i></a>
                                 <a href=""><i class="ri-facebook-fill"></i></a>
@@ -395,7 +398,7 @@
                             <span>Co-Researcher</span>
                             <p>Email: lanresodeinde@yahoo.com</p>
                             <p>Qualification: PhD.</p>
-                            <p>Institution: Others</p>
+                            <p>Institution: Neuropsychiatric Hospital, Aro, Abeokuta, Nigeria</p>
                             <div class="social">
                                 <a href=""><i class="ri-twitter-fill"></i></a>
                                 <a href=""><i class="ri-facebook-fill"></i></a>
@@ -414,7 +417,7 @@
                             <span>Co-Researcher</span>
                             <p>Email: monaolapo@yahoo.co.uk</p>
                             <p>Qualification: MSc.</p>
-                            <p>Institution: Others</p>
+                            <p>Institution: Neuropsychiatric Hospital, Aro, Abeokuta, Nigeria</p>
                             <div class="social">
                                 <a href=""><i class="ri-twitter-fill"></i></a>
                                 <a href=""><i class="ri-facebook-fill"></i></a>
@@ -476,7 +479,7 @@
             <div class="row">
 
                 <div class="col-lg-3 col-md-6 footer-contact">
-                    <h3>Medilab</h3>
+                    <h3>MENTAL HEALTH SENTIMENT ANALYSIS</h3>
                     <p>
                         Abeokuta <br>
                         Ogun State<br>
@@ -494,7 +497,7 @@
 
         <div class="me-md-auto text-center text-md-start">
             <div class="copyright">
-                &copy; Copyright <strong><span>Medilab</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>MENTAL HEALTH SENTIMENT ANALYSIS</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
                 <!-- All the links in the footer should remain intact. -->
