--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Sentiment Analysis App - Index</title>
+    <title>MENTAL HEALTH SENTIMENT ANALYSIS</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -41,7 +41,7 @@
     <div class="container d-flex justify-content-between">
         <div class="contact-info d-flex align-items-center">
             <i class="bi bi-envelope"></i> <a href="mailto:contact@example.com">mhf.tetfundgrant2020@gmail.com</a>
-            <i class="bi bi-phone"></i> +1 5589 55488 55
+            <i class="bi bi-phone"></i> +2348038296518
         </div>
         <div class="d-none d-lg-flex social-links align-items-center">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
