--- a/templates/index.html
+++ b/templates/index.html
@@ -477,8 +477,8 @@
     <div class="footer-top">
         <div class="container">
             <div class="row">
-
                 <div class="col-lg-3 col-md-6 footer-contact">
+                    <!-- Content for the first column -->
                     <h3>MENTAL HEALTH SENTIMENT ANALYSIS</h3>
                     <p>
                         Abeokuta <br>
@@ -487,6 +487,11 @@
                         <strong>Phone:</strong> +1 5589 55488 55<br>
                         <strong>Email:</strong> mhf.tetfundgrant2020@gmail.com <br>
                     </p>
+                </div>
+                <div class="column-gap-lg-0">
+                    <img src="{% static 'img/funaab-logo.png' %}" alt="Logo 2" class="img-fluid">
+                    <img src="{% static 'img/arologo.png' %}" alt="Logo 1" class="img-fluid">
+                    <img src="{% static 'img/tetfund-logo.jpeg' %}" alt="Logo 3" class="img-fluid">
                 </div>
 
             </div>
